--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <hr class="my-4">
                     <p class="bottom">
                         There are 3 files corresponding to Jupyter Notebooks. Since the hyperlinks inside the notebooks link to notebooks instead of HTML files, you need to manually navigate between the files.
+                        Note that it can take some time for each file to load in your browser.
                         <br><br>
                         <b>Open the notebook:</b>
                         <ul>
