--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <img class="mr-3 img-thumbnail" src="https://avatars1.githubusercontent.com/u/26367309" alt="Bartosz's profile picture on Github" style="width: 100px; height: 100px;">
                         <div class="media-body">
                           <h5 class="mt-0">Bartosz Dzionek</h5>
-                            Computer Science student at the University of Edinburgh.
+                            AI student at the University of Edinburgh.
                             <iframe src="https://ghbtns.com/github-btn.html?user=dzionek&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="230" height="30" title="GitHub" class="mt-2"></iframe>
                         </div>
                       </div>
